<resources>
    <string name="app_name">Planguin</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_school">School (Optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="invitation_button">invitation</string>
    <string name="settings_button">settings</string>
    <string name="invitationlayoutfint">InvitationLayoutFínt</string>
    <string name="schedule_button">schedule</string>
    <string name="compare_button">compare</string>
    <string name="friendlist_button">friends</string>
    <string name="grouplist_button">groups</string>
    <string name="schedule">Schedule</string>
    <string name="compare">Compare your schedule with a friend, or a group!</string>
    <string name="friendlist">FriendList</string>
    <string name="grouplist">GroupList</string>
    <string name="profile_button">Profile</string>
    <string name="created_group_button">Create Group!</string>
    <string name="namegroup">Name your group</string>
    <string name="addfriendtogroup">Add friends to group</string>
    <string name="addtogroup_button">Add to group!</string>
    <string name="welcome_text">Welcome to Planguin, your new favourite scheduling app! Please log in, or create your account by signing up.</string>
    <string name="planguin_logo">PLANGUIN</string>
    <string name="compare_friend">Compare with friend</string>
    <string name="compare_group">COmpare with group</string>
    <string name="log_out_button">Log Out!</string>
    <string name="delete_group_button">Delete group!</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="log_in_button">Log In!</string>
    <string name="submitevent_button">Add Event!</string>
    <string name="search_button">Search!</string>
    <string name="add_event_button">Add New Event</string>
    <string name="eventName">Name</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="editText_search">Name</string>
    <string name="choose_start">Choose start date</string>
    <string name="choose_end">Choose end date</string>
    <string name="choose_start_time">choose start time</string>
    <string name="choose_end_time">choose end time</string>
    <string name="search_tip">Tip: If you press search without entering any name, you get a list of all users.</string>
    <string name="color_pick_button">Pick a color</string>
    <string name="add_new_friend_button">Find friends</string>
    <string name="create_group_button">Create group</string>

    <string name="delete_event">Delete</string>
    <string name="edit_event">Edit</string>
    <string name="edit_event_button">edit event</string>
    <string name="repeat_check">Repeat weekly for the next month?</string>
    <string name="add_friend">Add friend!</string>
    <string name="school">School:</string>
    <string name="remove_friend">Remove friend!</string>
    <string name="filters">Enter filters, seperated by comma \',\'</string>
    <string name="filter_go">Go</string>
    <string name="eventDesc">Event description</string>
    <string name="tag_spinner">Choose filter</string>

</resources>
