<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.svava.planguin.Activities.AddEventActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <EditText
        android:id="@+id/eventName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/eventName"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="120dp" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/startTime" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/simpleTimePicker_Start"
            android:layout_width="166dp"
            android:layout_height="144dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:timePickerMode="spinner" />

        <DatePicker
            android:id="@+id/simpleDatePicker_Start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:datePickerMode="spinner"
            android:scaleX="0.9"
            android:scaleY="0.9" />
    </LinearLayout>

    <TextView
        android:id="@+id/endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/endTime" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/simpleTimePicker_End"
            android:layout_width="166dp"
            android:layout_height="144dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:timePickerMode="spinner" />

        <DatePicker
            android:id="@+id/simpleDatePicker_End"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:datePickerMode="spinner"
            android:scaleX="0.9"
            android:scaleY="0.9" />
    </LinearLayout>

    <Button
        android:id="@+id/submitevent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:onClick="onClick"
        android:text="@string/submitevent_button"
        android:textColor="@color/textcolor" />


</LinearLayout>
