<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.svava.planguin.Activities.CompareActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/compare"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <Spinner
            android:id="@+id/spinner_friend"
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinner_group"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/compare_friend_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/compare_friend"
            android:textColor="@color/textcolor" />

        <Button
            android:id="@+id/compare_group_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/compare_group"
            android:textColor="@color/textcolor" />
    </LinearLayout>

    <com.alamkanak.weekview.WeekView
        android:id="@+id/weekView_compare"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:eventTextColor="@android:color/white"
        app:textSize="12sp"
        app:hourHeight="40dp"
        app:headerColumnPadding="8dp"
        app:headerColumnTextColor="#8f000000"
        app:headerRowPadding="12dp"
        app:columnGap="8dp"
        app:noOfVisibleDays="3"
        app:headerRowBackgroundColor="#ffefefef"
        app:dayBackgroundColor="#05000000"
        app:todayBackgroundColor="#1848adff"
        app:headerColumnBackground="#ffffffff"
        app:dayNameLength="length_short" />

</LinearLayout>
